FSW-19: Popup click issue resolved on mobile

--- a/packages/mars-theme/src/component/style.css
+++ b/packages/mars-theme/src/component/style.css
@@ -28,7 +28,7 @@ textarea.wpcf7-form-control.wpcf7-textarea {
 }
 .button {
   text-align: end;
-} 
+}
 input.wpcf7-form-control.wpcf7-submit {
   background: #525f7a;
   color: white;
@@ -391,7 +391,7 @@ textarea.wpcf7-form-control.wpcf7-textarea:focus-visible {
   object-fit: cover;
   max-height: 96px;
   max-width: 140px;
-  transform:rotate(350deg);
+  transform: rotate(350deg);
 }
 .search__closeBtn {
   background: #f1f1f1;
@@ -431,7 +431,7 @@ textarea.wpcf7-form-control.wpcf7-textarea:focus-visible {
   border-radius: 10px;
   border: 1px solid #ccc;
 }
-.search_submit_btn{
+.search_submit_btn {
   margin: -1px;
 }
 .search__wrap {
@@ -586,11 +586,11 @@ p.chakra_text_soon span {
 .subs__btn {
   z-index: -2;
 }
-.datepkricon{
+.datepkricon {
   z-index: 1 !important;
 }
 
-.searchtop{
+.searchtop {
   display: none;
 }
 /**/
@@ -642,12 +642,13 @@ p.chakra_text_soon span {
   }
 }
 /* 09-06-2022  */
-.search__form_main .search-top button  {
-    border-radius: 0px 7px 7px 0;
+.search__form_main .search-top button {
+  border-radius: 0px 7px 7px 0;
 }
-.search-top{
+.search-top {
   padding: 15px;
-    margin: -13px;
+  margin: -13px;
+  position: relative;
 }
 .search__form_main_popup {
   top: 100px;
@@ -658,6 +659,13 @@ p.chakra_text_soon span {
 /* .search__form_main .box{
   display: none;
 } */
+form.search__form_main .search-top input {
+  width: 51px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 51px;
+}
 form.search__form_main .search__wrap input {
   background-color: #f3f4f7;
   width: 250px;
@@ -743,10 +751,10 @@ form.search__form_main .search__wrap input:focus-visible {
   padding-left: 20px;
 }
 .search__form_main_popup .popup .content {
-  max-height: unset; 
-  width: 100%;  
+  max-height: unset;
+  width: 100%;
 }
-.search__form_main_popup .popup .content  .search-panel__content{
+.search__form_main_popup .popup .content .search-panel__content {
   box-shadow: none;
 }
 span.search_result_name_with_count {
@@ -757,7 +765,7 @@ span.search_result_name_with_count {
   text-align: left;
   margin-bottom: 15px;
 }
-input.hiddentext{
+input.hiddentext {
   width: 1px;
   opacity: 0;
 }
@@ -770,7 +778,7 @@ input.hiddentext:focus {
     min-height: 600px;
   }
 } */
-@media screen and (max-width:1024px) {
+@media screen and (max-width: 1024px) {
   .relatedSearchData .search_pro_wrap {
     width: 50%;
   }
@@ -789,32 +797,32 @@ input.hiddentext:focus {
     border: 0;
   }
   .search__box_inner .search__icon {
-    height: 20px!important;
-    padding-left:0px;
+    height: 20px !important;
+    padding-left: 0px;
     width: 20px;
     margin: 0;
   }
-  form.search__form_main .popup-box .search__icon{
+  form.search__form_main .popup-box .search__icon {
     margin-top: 11px;
-      margin-left: 13px;
+    margin-left: 13px;
   }
   form.search__form_main .search__wrap input {
-    width:1px;
+    width: 1px;
     margin: 0;
     padding: 0;
     background: none;
     font-size: 0;
     color: #fff;
-}
+  }
   .search__form_main {
     width: auto;
   }
   .relatedSearchData .search_pro_wrap {
     width: 100%;
   }
-  .popup-box .popup.search__wrap{
+  .popup-box .popup.search__wrap {
     height: 100%;
-    padding:0px;
+    padding: 0px;
     border: 0;
     width: 95%;
     margin: auto;
@@ -829,27 +837,27 @@ input.hiddentext:focus {
   }
   .logo p {
     z-index: 0;
-}  
-.popup-box .popup .close {
-  top: 5px;
-  right: 13px;
-  font-weight: 500;
-  color: #000;
-  background: none;
-  font-size: 28px;
-  margin-top: 0;
-}
-.search-panel__content {
-  border-radius: 8px;
-}
+  }
+  .popup-box .popup .close {
+    top: 5px;
+    right: 13px;
+    font-weight: 500;
+    color: #000;
+    background: none;
+    font-size: 28px;
+    margin-top: 0;
+  }
+  .search-panel__content {
+    border-radius: 8px;
+  }
   .search__form_main_popup {
     width: 100%;
   }
   .search__form_main_popup {
     top: 0;
-    height:100%;
+    height: 100%;
     padding: 50px 0;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
   }
   .search__form_main_popup .popup .content {
     max-height: 100%;
@@ -857,13 +865,13 @@ input.hiddentext:focus {
   .sticky-header button.chakra-button:focus {
     box-shadow: none;
   }
-  .search_viewmore_btn{
+  .search_viewmore_btn {
     margin-bottom: 0;
   }
-  .search-panel__suggestions{
+  .search-panel__suggestions {
     padding-top: 0;
   }
-  .searchtop{
+  .searchtop {
     width: 100%;
     display: flex;
     position: relative;
@@ -872,10 +880,10 @@ input.hiddentext:focus {
     border-radius: 5px;
     border: solid 1px #ddd;
   }
-  form.search__form_main .popup-box .search__wrap input{
-    width: 100% ;
+  form.search__form_main .popup-box .search__wrap input {
+    width: 100%;
     padding: 10px;
-    font-size:16px;
+    font-size: 16px;
     color: #999;
   }
 }
